<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/content_inset"
        android:paddingTop="@dimen/content_inset_half">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_inset"
            android:layout_marginTop="@dimen/content_inset_half"
            android:fontFamily="sans-serif-light"
            android:text="@string/choose_discovered_device"
            android:textSize="@dimen/body_text_size"/>

        <LinearLayout
            android:id="@+id/discovered_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:background="#40000000"
            tools:layout_height="100dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginBottom="@dimen/content_inset"
            android:layout_marginTop="@dimen/content_inset_half"
            android:background="@color/divider_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/content_inset"
            android:paddingRight="@dimen/content_inset">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset_half"
                android:labelFor="@+id/input_username"
                android:text="@string/username"/>

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_inset"
                android:labelFor="@+id/input_password"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/button_login"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginTop="@dimen/content_inset"
                android:enabled="false"
                android:text="@string/login"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>