<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/activity_main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="@dimen/content_inset"
                  tools:context="com.afollestad.pifeeder.ui.MainActivity">

        <Button
            android:id="@+id/button_activate_now"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:layout_marginTop="@dimen/content_inset"
            android:text="@string/activate_now"/>

        <Button
            android:id="@+id/button_sms_notifications"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:layout_marginTop="@dimen/content_inset"
            android:text="@string/turn_on_sms_notifications"/>

        <Button
            android:id="@+id/button_dashboard"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:layout_marginTop="@dimen/content_inset"
            android:text="@string/dashboard"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginBottom="@dimen/content_inset_more"
            android:layout_marginTop="@dimen/content_inset_more"
            android:background="@color/divider_color"/>

        <Button
            android:id="@+id/button_logout"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:text="@string/logout"/>

    </LinearLayout>

</ScrollView>